# tailwag

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md
examples/: breweries.rs  fencing_data.rs  one_to_many_relationships.rs  todo.rs
examples/breweries/: brewery.rs  event.rs  food_truck.rs  main.rs
examples/food_trucker/: Cargo.toml
examples/food_trucker/src/: main.rs
examples/shop/: main.rs  order.rs  product.rs  stripe_integration.rs
examples/shop.bak/: README.md  main.rs  product.rs  stripe_integration.rs
examples/shop/tests__hurl/: login_register_work.hurl
examples/tailwag_test_app/: Cargo.toml
examples/tailwag_test_app/src/: main.rs
src/: lib.rs  main.rs
ts__tailwag_ui_components/: rollup.config.js
