[workspace]
members = [
    "crates/application",
    # "crates/deployer",
    "crates/forms",
    # "crates/geometry",
    # "crates/gui",
    "crates/macros",
    # "crates/openapi_generator",
    "crates/orm",
    # "crates/templater",
    "crates/utils",
]

[package]
name = "tailwag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tailwag_web_service = { version = "0.1.0", path = "crates/application", optional = true }
tailwag_macros = { version = "0.1.0", path = "crates/macros", optional = true }
tailwag_orm = { version = "0.1.0", path = "crates/orm", optional = true }
tailwag_forms = { version = "0.1.0", path = "crates/forms", optional = true }
# tailwag_gui_tools = { version = "0.1.0", path = "crates/gui", optional = true }
tailwag_utils = { version = "0.1.0", path = "crates/utils", optional = true }

# tailwag_deployer = { version = "0.1.0", path = "crates/deployer", optional = true }
# openapi_generator = { version = "0.1.0", path = "crates/openapi_generator", optional = true }
serde_json = "1.0.117"
tower-http = { version = "0.5.1", features = ["trace", "full"] }
uuid = { version = "1.4.1", features = ["v4"] }
tailwag_orm_macros = { version = "0.1.0", path = "crates/orm/macros" }
chrono = { version = "0.4.33", features = ["serde"] }
reqwest = "0.11.24"
log = "0.4.20"
hurl = "4.2.0"

[dev-dependencies]
async-trait = "0.1.73"
axum = "0.6.20"
eframe = "0.23.0"
regex = "1.10.3"
serde = { version = "1.0.202", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "postgres",
    "uuid",
    "chrono",
    "json",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = "1.4.1"

[features]
default = ["all"]
all = ["web_service", "macros", "orm", "utils", "deployer", "gui", "forms"]
web_service = ["dep:tailwag_web_service"]
macros = ["dep:tailwag_macros"]
forms = ["dep:tailwag_forms"]
orm = ["tailwag_macros?/orm", "tailwag_macros?/default", "dep:tailwag_orm"]
# gui = ["dep:tailwag_gui_tools"]
gui = [] # GUI features not yet released
utils = ["dep:tailwag_utils"]
deployer = [] # Deployer features not yet released
# deployer = ["dep:tailwag_deployer"]
