[workspace]
members = [
    "crates/application",
    # "crates/deployer",
    "crates/forms",
    # "crates/geometry",
    # "crates/gui",
    "crates/macros",
    # "crates/openapi_generator",
    "crates/orm",
    "crates/utils",
]

[package]
name = "tailwag"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikwithak/tailwag"
description = "This is the main crate for the Tailwag suite, an experimental framework for building batteries-included application prototypes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
tailwag_web_service = { git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_macros = { git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_macro_exports = { git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_macro_logic = { git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_macro_inline = { git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_orm = {  git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_orm_macros = {  git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_orm_macro_logic = {  git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_forms = { git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_forms_macros = { git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_forms_macro_logic = { git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }
tailwag_utils = { git = "https://github.com/nikwithak/tailwag", branch = "develop", optional = true }


[dependencies]
tailwag_web_service = { version = "0.2.0", path = "crates/application", optional = true }
tailwag_macros = { version = "0.2.1", path = "crates/macros", optional = true }
tailwag_orm = { version = "0.2.0", path = "crates/orm", optional = true }
tailwag_forms = { version = "0.2.0", path = "crates/forms", optional = true }
tailwag_utils = { version = "0.1.1", path = "crates/utils", optional = true }
tailwag_orm_macros = { version = "0.2.0", path = "crates/orm/macros" }

# tailwag_deployer = { version = "0.1.0", path = "crates/deployer", optional = true }
# openapi_generator = { version = "0.1.0", path = "crates/openapi_generator", optional = true }
serde_json = "1.0.117"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = { version = "0.4.33", features = ["serde"] }
eframe = { version = "0.23.0", optional = true }
reqwest = "0.11.24"
log = "0.4.20"
hurl = "4.2.0"

[dev-dependencies]
async-trait = "0.1.73"
axum = "0.6.20"
regex = "1.10.3"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = "1.4.1"
async-stripe = { version = "0.34.1", features = ["runtime-tokio-hyper"] }

[features]
default = ["all"]
all = ["web_service", "macros", "orm", "utils", "deployer", "forms"]
web_service = ["dep:tailwag_web_service"]
macros = ["dep:tailwag_macros"]
forms = ["dep:tailwag_forms"]
orm = ["tailwag_macros?/orm", "tailwag_macros?/default", "dep:tailwag_orm"]
# gui = ["dep:tailwag_gui_tools"]
gui = ["dep:eframe"] # GUI features not yet released
utils = ["dep:tailwag_utils"]
deployer = [] # Deployer features not yet released
# deployer = ["dep:tailwag_deployer"]