[package]
name = "tailwag_test_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
tailwag = { version = "0.1.0", path = "../tailwag" }
tokio = { version = "1.32.0", features = ["full"] }
uuid = "1.4.1"
